Ensure g++ command available.

--- a/Makefile.docker
+++ b/Makefile.docker
@@ -9,7 +9,8 @@ DOCKER_PASSWORD := $$(cat ~/.jfrog/jfrog-cli.conf | jq -r '.artifactory | .[] | 
 build:
 	@echo "$(DOCKER_PASSWORD)" | docker login $(DOCKER_REPOSITORY) -u="$(DOCKER_USERNAME)" --password-stdin
 	docker pull $(DOCKER_REPOSITORY)/ruby-centos7:latest
-	ID=$$(docker create -w $(BUILD_HOME) -i $(DOCKER_REPOSITORY)/package-centos7:latest /bin/bash -l -c "cd ruby-druid && bundle install && rake build")
+	ID=$$(docker create -w $(BUILD_HOME) -i $(DOCKER_REPOSITORY)/package-centos7:latest /bin/bash -l -c \
+		"yum groupinstall 'Development Tools' && cd ruby-druid && bundle install && rake build")
 	docker cp -a ./. $${ID}:$(BUILD_HOME)/ruby-druid/
 	docker start -ai $${ID}
 	docker stop $${ID}
