--- a/Makefile.docker
+++ b/Makefile.docker
@@ -10,7 +10,7 @@ build:
 	@echo "$(DOCKER_PASSWORD)" | docker login $(DOCKER_REPOSITORY) -u="$(DOCKER_USERNAME)" --password-stdin
 	docker pull $(DOCKER_REPOSITORY)/ruby-centos7:latest
 	ID=$$(docker create -w $(BUILD_HOME) -i $(DOCKER_REPOSITORY)/package-centos7:latest /bin/bash -l -c \
-		"sudo yum groupinstall 'Development Tools' && cd ruby-druid && bundle install && rake build")
+		"sudo yum -y groupinstall 'Development Tools' && cd ruby-druid && bundle install && rake build")
 	docker cp -a ./. $${ID}:$(BUILD_HOME)/ruby-druid/
 	docker start -ai $${ID}
 	docker stop $${ID}
